--- a/data/style.css
+++ b/data/style.css
@@ -1,141 +1,148 @@
-body {
-   background-color: lightsalmon;
-   font-family: Arial, Helvetica, sans-serif;
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  display: inline-block;
+  text-align: center;
 }
-
 h1 {
-   color: navy;
-   margin-left: 20px;
-   font-size: 150%
+  font-size: 1.8rem;
+  color: black;
+}
+p {
+  font-size: 1.4rem;
+}
+body {
+  margin: 0;
 }
 
-ul {
-   list-style-type: none;
-   margin: 0;
-   margin-left: -10px;
-   overflow: hidden;
-   background-color: saddlebrown;
-   position:fixed;
-   top:0;
-   width:100%;
-   z-index:100;
+/* Style for navigation bar */
+
+/* Add a background color to the top navigation */
+.topnav {
+  overflow: hidden;
+  background-color: #0A1128;
 }
 
-li .pull-left {
-   float: left;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px 18px;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
-li .pull-right {
-   float: right;
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #186775;
+  color: white;
 }
 
-li a {
-   display: block;
-   color: white;
-   text-align: center;
-   padding: 14px 16px;
-   text-decoration: none;
+.disabled {
+  pointer-events: none;
 }
 
-li a:hover, a.active {
-   background-color: #111;
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
 }
 
+.topnav-right{
+  float:right;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one. */
+@media screen and (max-width: 600px) {
+  .topnav-right a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
+This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a, .topnav.responsive .topnav-right {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* Styles for content */
+.content {
+  padding: 5%;
+}
+.card-grid {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.card {
+  background-color: white;
+  box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
+}
+.card-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #034078
+}
+.chart-container {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+.state {
+  font-size: 1.2rem;
+  color:#1282A2;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px
+}
+.switch input {
+  display: none
+}
+.slider {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: #ccc;
+  border-radius: 50px
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #fff;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50px;
+}
+input:checked+.slider {
+  background-color: #b30000;
+}
+input:checked+.slider:before {
+  -webkit-transform: translateX(19px);
+  -ms-transform: translateX(19px);
+  transform: translateX(19px);
+}
 td.config {
    text-align: right;
 }
-
-.button {
-   width: 90px;
-   height: 30px;
-   background-color: #128F76;
-   border: none;
-   color: white;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 16px;
-   margin: 4px 2px;
-   cursor: pointer;
-   border-radius: 10px;
-}
-
-.buttonr {background-color: red;}
-
-.select {
-   width: 160px;
-   height: 32px;
-   padding: 5px;
-   background: white;
-   font-size: 16px;
-   line-height: 1;
-   border: 1;
-   border-radius: 5px;
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   -webkit-appearance: none;
-   border: 1px solid black;
-   border-radius: 10px;
-}
-
-.selectw {width: 410px;}
-
-input {
-   margin: 0;
-   height: 28px;
-   background: white;
-   font-size: 16px;
-   appearance: none;
-   box-shadow: none;
-   border-radius: 5px;
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   -webkit-appearance: none;
-   border: 1px solid black;
-   border-radius: 10px;
-}
-
-input[type="text"] {
-   text-align: right;
-}
-
 input.config {
-   text-align: left;
    width: 300px;
-}
-
-input.Version {
-   text-align: center;
-   border: 0px;
-   background-color: transparent;
-}
-
-input[type="text"]:focus {
-  outline: none;
-}
-
-input[type=submit] {
-  width: 200px;
-  height: 40px;
-  background-color: #128F76;
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-textarea {
-  width: 80;
-  height: 25;
-  border: 1px solid black;
-  border-radius: 10px;
-  padding: 5px;
-  font-family: Courier, "Lucida Console", monospace;
-  background-color: white;
-  resize: none;
 }
